--- a/style.css
+++ b/style.css
@@ -5,20 +5,29 @@ div {
 
 #cont {
     background-color: azure;
-    height:800px;
-    width:800px;
-    display: flex;
+    height:700px;
+    width:700px;
+    display:flex;
 }
 
 .flexitem{
-    flex:auto;
+    flex: 1;
 }
 
 .cells{
     border: 0.5px solid black;
     background-color:white;
+    width:100%;
+    height:100%
 }
 
 .hvr {
     background-color: aqua;
+}
+
+.row{
+    display:flex;
+    flex-direction: column;
+    width:100%;
+    height:100%;
 }
